<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/marco_boton" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:background="@color/color_blanco" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
 >

            <TextView
                android:id="@+id/dialogo_gps_wifi_tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/app_name" 
                android:drawableLeft="@drawable/ic_launcher"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_base" />

            <TextView
                android:id="@+id/dialogo_gps_wifi_tv_descripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dialogo_texto" />

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialogo_btn_editar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dialogo_editar" 
                android:background="@drawable/selector_btn_square"
                android:textColor="@drawable/selector_tv_color_btn"/>

            <Button
                android:id="@+id/dialogo_btn_borrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dialogo_borrar" 
                 android:background="@drawable/selector_btn_square"
                 android:textColor="@drawable/selector_tv_color_btn"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>